# manaba-notifier

./: .env.example  .gitignore  INSTALL.md  README.md  pyproject.toml
src/manaba_notifier/: __init__.py  collector.py  config.py  diagnostic_log.py  discord.py  error_details.py  errors.py  filter.py  login.py  main.py  models.py  new_assignments_main.py  new_assignments_state.py  runtime.py  scraper.py  todoist.py
systemd/: manaba-new-assignments.service  manaba-new-assignments.timer  manaba-notifier.service  manaba-notifier.timer
tests/: test_config.py  test_diagnostic_log.py  test_discord.py  test_filter.py  test_login.py  test_main.py  test_new_assignments_main.py  test_new_assignments_state.py  test_runtime.py  test_scraper.py  test_todoist.py
tests/fixtures/: assignments.html
