[project]
name = "manaba-notifier"
version = "0.1.0"
description = "Notify manaba assignments via Discord and synchronize new assignments with Todoist"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.12,<5",
    "playwright>=1.49,<2",
    "python-dotenv>=1.0,<2",
    "requests>=2.32,<3",
]

[dependency-groups]
dev = [
    "pytest>=8.3,<9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/manaba_notifier"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
